--- a/styles/style.css
+++ b/styles/style.css
@@ -1,54 +1,11 @@
 @import url(variaveis.css);
+@import url(cabecalho.css);
+@import url(container.css);
+@import url(personagens.css);
 
 body {
     background-color: var(--background);
+    color: aliceblue;
+    font-family: "RobotoSlab-Bold.ttf", sans-serif;
 }
 
-.cabecalho {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding-right: 1em;
-    background-color: var(--header);
-    height: 50px;
-    font-family: "diablo", sans-serif;
-}
-.cabecalho img {
-    width: 100px;
-}
-.hero {
-    align-items: center;
-    background-image: url(../assets/banner.png);
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    height: 620px;
-    opacity: 0.7;
-    overflow: hidden;
-    padding: 3rem 0;
-    width: 100%;
-}
-.hero-button {
-    align-items: center;
-    background: linear-gradient(90deg, rgb(183, 117, 17) 0%, rgb(206, 147, 36) 70%);
-    border: 4px solid var(--background);
-    color: white;
-    cursor: pointer;
-    display: flex;
-    font-weight: 600;
-    text-transform: uppercase;
-    margin: auto;
-    justify-content: center;
-    width: 480px;
-    height: 50px;
-    border-radius: 4rem;
-    font-size: 2rem;
-}
-.hero-button p {
-    font-family: "diablo", sans-serif;
-    font-size: 28px;
-}
-a {
-    color: var(--background-button);
-}
