exclusão de páginas

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,25 @@
 @import url(variaveis.css);
 @import url(cabecalho.css);
 @import url(container.css);
-@import url(personagens.css);
 
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "roboto", sans-serif;
+}
 body {
     background-color: var(--background);
-    color: aliceblue;
-    font-family: "RobotoSlab-Bold.ttf", sans-serif;
+}
+.card-image {
+    position: relative;
+    height: 150px;
+    width: 150px;
+}
+.card-image .card-img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
